# titanic-survival-analysis

./: .gitignore  dashboard.py  environment.yml  pyproject.toml  requirements.txt
data/processed/: titanic_processed.csv
notebooks/: titanic-survival-analysis.ipynb
