[project]
name = "titanic-survival-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flask>=2.0.0",
    "ipykernel>=6.0.0",
    "joblib>=1.3.0",
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "openpyxl>=3.0.0",
    "pandas>=2.0.0",
    "pillow>=9.0.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.10.0",
    "seaborn>=0.12.0",
    "threadpoolctl>=3.0.0",
]
